--- a/views/versions.html
+++ b/views/versions.html
@@ -4,11 +4,9 @@
   <thead>
     <tr>
       <th>Version</th>
-      <th>OS X</th>
-      <th>Windows 32</th>
-      <th>Windows 64</th>
-      <th>Linux 32</th>
-      <th>Linux 64</th>
+      <th>OS X (zip)</th>
+      <th>OS X (installer)</th>
+      <th>Windows 64 (installer)</th>
     </tr>
   </thead>
   <tbody>
@@ -16,10 +14,9 @@
       <tr>
         <td>{{ version }}</td>
         <td><a href="{{ urls.darwin_x64 }}">{{#lambdas.basename}}{{ urls.darwin_x64 }}{{/lambdas.basename}}</a></td>
-        <td><a href="{{ urls.windows_ia32 }}">{{#lambdas.basename}}{{ urls.windows_ia32 }}{{/lambdas.basename}}</a></td>
+        <td><a href="{{ urls.darwin_x64_dmg }}">{{#lambdas.basename}}{{ urls.darwin_x64_dmg }}{{/lambdas.basename}}</a></td>
+        <!-- <td><a href="{{ urls.windows_ia32 }}">{{#lambdas.basename}}{{ urls.windows_ia32 }}{{/lambdas.basename}}</a></td> -->
         <td><a href="{{ urls.windows_x64 }}">{{#lambdas.basename}}{{ urls.windows_x64 }}{{/lambdas.basename}}</a></td>
-        <td><a href="{{ urls.linux_32 }}">{{#lambdas.basename}}{{ urls.linux_32 }}{{/lambdas.basename}}</a></td>
-        <td><a href="{{ urls.linux_64 }}">{{#lambdas.basename}}{{ urls.linux_64 }}{{/lambdas.basename}}</a></td>
       </tr>
     {{/versions}}
   </tbody>
